# stokes_flow

./: .gitignore  CMakeLists.txt  README.md  a.out  build.sh  main.cpp  pardiso.cpp  quad.tp  stokes  test.inp  test.vtk  test.vtu  test_Kp.csv  test_presssure.vtu  test_velocity.vtu  topology  transform.py  triangle.tp
cmake/: FindEigen.cmake
example/topology/: topology.tp
example/voxel_stokes/: quad.tp
include/: MMA.hpp  pardiso_solver.h  stokes.hpp  topology.hpp
lib_src/: domain.cpp  fileIO.cpp  pardiso.cpp  stokes_main.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  MMA.cpp  fileIO.cpp  gauss.cpp  parameter.cpp  stokes_main.cpp  topology_stokes.cpp
src/stokes/: CMakeLists.txt  main.cpp
src/topology/: CMakeLists.txt  main.cpp
